overflow fix

--- a/about.css
+++ b/about.css
@@ -93,7 +93,7 @@ body{
 }
 #info_1{
     text-align: center;
-    margin-top: 70px;
+    margin-top: 15px;
     color: #ffff;
     font-weight: bold;
     
